[package]
name = "statsig"
version = "0.2.2"
description = "Statsig Rust SDK for usage in multi-user server environments."
keywords = ["gate", "flag", "ci", "test", "experiment"]
categories = ["api-bindings", "development-tools", "web-programming", "config"]
repository = "https://github.com/statsig-io/rust-sdk"
documentation = "https://docs.statsig.com/server/rustSDK"
homepage = "https://statsig.com/"
authors = ["Statsig", "Daniel Loomb <daniel@statsig.com>"]
license = "ISC"
edition = "2021"
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
http = "0.2.8"
serde_json = {version = "1.0", features = ["float_roundtrip"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
uaparser = "0.6.0"
chrono = "0.4.23"
regex = "1.7.0"
tokio = { version = "1.22.0", features = ["rt-multi-thread"] }

