[package]
name = "statsig"
version = "1.2.0"
description = "Statsig Rust SDK for usage in multi-user server environments."
keywords = ["gate", "flag", "ci", "test", "experiment"]
categories = ["api-bindings", "development-tools", "web-programming", "config"]
repository = "https://github.com/statsig-io/rust-sdk"
documentation = "https://docs.statsig.com/server/rustSDK"
homepage = "https://statsig.com/"
authors = ["Statsig", "Daniel Loomb <daniel@statsig.com>"]
license = "ISC"
edition = "2021"
readme = "README.md"

[dependencies]
base64 = "0.21.6"
chrono = "0.4.23"
http = "0.2.8"
lazy_static = "1.4.0"
regex = "1.7.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
sha2 = "0.10.6"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
uaparser = "0.6.0"
thiserror = "1.0.58"
async-trait = "0.1"
